feat(core): idempotent agent registry with dedupKey; add SSE /agents/stream
perf(metrics): add Prometheus counters/histograms for registry and heartbeat

test(core): idempotency and metrics tests; add fakeredis dependency

--- a/hypercode-core/Dockerfile
+++ b/hypercode-core/Dockerfile
@@ -1,8 +1,6 @@
 
-# ========================================
 # Stage 1: Builder
-# ========================================
-FROM python:3.11-slim AS builder
+FROM python:3.11-slim as builder
 
 WORKDIR /build
 
@@ -12,41 +10,51 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
+# Install dependencies to a local folder that we can copy
 RUN pip install --user --no-cache-dir -r requirements.txt
+RUN pip install --user --no-cache-dir prisma
+
+# Set PATH for builder
+ENV PATH=/root/.local/bin:$PATH
+
+# Copy schema for generation
+COPY prisma ./prisma
+# Generate client
+RUN prisma generate
 
 # ========================================
 # Stage 2: Runtime
 # ========================================
-FROM python:3.11-slim
+FROM python:3.11-slim as runtime
 
 WORKDIR /app
 
-# Install curl for healthcheck
+# Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
+    libatomic1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
 RUN useradd -m appuser
 
-# Copy only necessary files from builder
+# Copy installed packages from builder
 COPY --from=builder /root/.local /home/appuser/.local
-
-# Update PATH
-ENV PATH=/home/appuser/.local/bin:$PATH
 
 # Copy application code
 COPY . .
 
-# Change ownership
+# Change ownership of application code
 RUN chown -R appuser:appuser /app
+RUN chown -R appuser:appuser /home/appuser
 
+# Explicitly download/ensure prisma binary exists in user space
+# We re-run generate in runtime to ensure binaries are in the right place for the user
+# This is safer than copying root cache
 USER appuser
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
-  CMD curl -f http://localhost:8000/health || exit 1
+ENV PATH=/home/appuser/.local/bin:$PATH
+RUN prisma generate
 
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
