--- a/hypercode-core/requirements.txt
+++ b/hypercode-core/requirements.txt
@@ -14,3 +14,8 @@ httpx==0.26.0
 prometheus-fastapi-instrumentator==6.1.0
 sentry-sdk==1.40.0
 structlog==24.1.0
+opentelemetry-distro
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
+fakeredis==2.19.0
+
