--- a/hyperflow-editor/Dockerfile
+++ b/hyperflow-editor/Dockerfile
@@ -1,10 +1,9 @@
-
 # ========================================
 # Stage 1: Dependencies
 # ========================================
 FROM node:18-alpine AS deps
 WORKDIR /app
-# Copy package.json and optional package-lock.json
+
 COPY package.json package-lock.json* ./
 RUN npm ci
 
@@ -13,7 +12,10 @@ RUN npm ci
 # ========================================
 FROM node:18-alpine AS builder
 WORKDIR /app
+
+COPY package.json package-lock.json* ./
 COPY --from=deps /app/node_modules ./node_modules
+
 COPY . .
 RUN npm run build
 
@@ -22,10 +24,11 @@ RUN npm run build
 # ========================================
 FROM node:18-alpine AS runner
 WORKDIR /app
-ENV NODE_ENV=production 
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
+ENV NODE_ENV=production
+
+RUN addgroup --system --gid 1001 nodejs \
+    && adduser --system --uid 1001 nextjs
 
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
@@ -35,5 +38,7 @@ USER nextjs
 
 EXPOSE 5173
 
-HEALTHCHECK --interval=30s --timeout=5s --retries=5 CMD wget -qO- http://localhost:5173/ >/dev/null || exit 1
+HEALTHCHECK --interval=30s --timeout=5s --retries=5 \
+    CMD wget -qO- http://localhost:5173/ >/dev/null || exit 1
+
 CMD ["npm", "run", "preview", "--", "--host"]
