feat(orchestrator): add mission listing, audit, and approval endpoints
- Add list_missions endpoint to retrieve missions with pagination
- Add get_audit endpoint to fetch audit logs for a specific mission
- Add approve endpoint to mark missions as approved
- Implement find_many methods for in-memory database models to support queries
- Mark experimental tests with pytest marker for selective execution
- Add pytest markers configuration for experimental and flaky tests

--- a/hypercode-core/pytest.ini
+++ b/hypercode-core/pytest.ini
@@ -4,3 +4,6 @@ asyncio_mode = auto
 testpaths = tests
 python_files = test_*.py
 addopts = -v --cov=app --cov=main --cov-report=term-missing --cov-report=html --cov-report=xml --cov-branch
+markers =
+    experimental: marks tests as experimental/WIP (deselect with '-m "not experimental"')
+    flaky: marks tests as flaky/timing-dependent (deselect with '-m "not flaky"')
