chore: update core services, tests, and frontend assets

--- a/hypercode-core/.env
+++ b/hypercode-core/.env
@@ -15,3 +15,12 @@ HYPERCODE_REDIS_URL=redis://redis:6379/0
 APP_ENV=production
 LOG_LEVEL=info
 OPENAI_API_KEY=sk-placeholder-key
+HYPERCODE_JWT_SECRET=zyl4Cd5JeZ6bc2F6BZzTjd6zp6FlRdDmcCW1iWuFJQs
+HYPERCODE_MEMORY_KEY=change_this_to_a_secure_random_key_in_production
+
+
+# LLM Configuration (Local Llama)
+LLM_PROVIDER=ollama
+OLLAMA_URL=http://llama:11434
+OLLAMA_MODEL=tinyllama
+ENABLE_AI_FEATURES=true
