--- a/hypercode-core/Dockerfile
+++ b/hypercode-core/Dockerfile
@@ -5,16 +5,20 @@ FROM python:3.11-slim AS builder
 
 WORKDIR /build
 
+# Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
+# Install Python dependencies
 COPY requirements.txt .
-RUN pip install --user --no-cache-dir -r requirements.txt \
-    && pip install --user --no-cache-dir prisma
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /wheels -r requirements.txt \
+    && pip wheel --no-cache-dir --no-deps --wheel-dir /wheels prisma
 
-ENV PATH=/root/.local/bin:$PATH
-
+# Generate Prisma Client
+# We install prisma temporarily in builder to generate the client
+RUN pip install --no-cache-dir prisma
 COPY prisma ./prisma
 RUN prisma generate
 
@@ -29,31 +33,41 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     UVICORN_WORKERS=1
 
+# Install runtime dependencies (minimal)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     libatomic1 \
-    wget \
+    openssl \
+    ca-certificates \
     && rm -rf /var/lib/apt/lists/* \
     && useradd -m appuser
 
-COPY --from=builder /root/.local /home/appuser/.local
+# Install wheels from builder
+COPY --from=builder /wheels /wheels
+RUN pip install --no-cache /wheels/*
+
+# Copy generated Prisma client
+COPY --from=builder /build/prisma ./prisma
 
 COPY . .
 
-RUN chown -R appuser:appuser /app /home/appuser
+# Grant appuser permissions to site-packages for prisma client generation
+RUN chown -R appuser:appuser /app && \
+    chown -R appuser:appuser /usr/local/lib/python3.11/site-packages
 
-# Run as root in runtime to avoid prisma cache permission issues in demo
-# For production, prefer running as non-root and set prisma cache dir appropriately
-USER root
+# Run as appuser for security
+USER appuser
 
-ENV PATH=/home/appuser/.local/bin:$PATH \
-    PYTHONPATH=/home/appuser/.local/lib/python3.11/site-packages
+ENV PATH=/home/appuser/.local/bin:$PATH
 
-# Prisma client already generated in builder stage
+# Generate Prisma Client in runtime environment as appuser
+# This ensures binaries are stored in a location accessible to the user (e.g., ~/.cache)
+# and the client code in site-packages is updated correctly.
+RUN prisma generate
 
 EXPOSE 8000
 
 HEALTHCHECK --interval=30s --timeout=5s --retries=5 --start-period=20s \
     CMD curl -sf http://localhost:8000/health || exit 1
 
-CMD uvicorn main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS}
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
