--- a/hypercode-core/docker-compose.core.yml
+++ b/hypercode-core/docker-compose.core.yml
@@ -42,3 +42,24 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  llama:
+    image: ollama/ollama:latest
+    container_name: hypercode-llama
+    restart: unless-stopped
+    ports:
+      - "11434:11434"
+    volumes:
+      - ./data/ollama:/root/.ollama
+    environment:
+      - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_ORIGINS=*
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+    networks:
+      - core-tier
+
