--- a/hypercode-core/requirements.txt
+++ b/hypercode-core/requirements.txt
@@ -1,15 +1,16 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-redis==5.0.1
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-multipart==0.0.6
+fastapi>=0.115.0
+uvicorn>=0.30.0
+redis>=5.0.1
+pydantic>=2.9.0
+pydantic-settings>=2.4.0
+python-multipart>=0.0.9
 requests==2.31.0
+cryptography>=42.0.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-openai==1.10.0
-pytest==7.4.4
-pytest-asyncio==0.23.3
+openai>=1.50.0
+pytest>=8.0.0
+pytest-asyncio>=0.25.0
 pytest-cov==4.1.0
 coverage==7.4.0
 httpx==0.26.0
@@ -19,5 +20,7 @@ structlog==24.1.0
 opentelemetry-distro
 opentelemetry-exporter-otlp
 opentelemetry-instrumentation-fastapi
-fakeredis==2.19.0
+fakeredis>=2.20.0
 sse-starlette==1.6.1
+celery>=5.3.0
+uvicorn[standard]>=0.30.0
