feat: core updates - AI integration, Redis fixes, Test coverage, BDS styles

--- a/hypercode-core/Dockerfile
+++ b/hypercode-core/Dockerfile
@@ -1,31 +1,38 @@
+# HyperCode Core - Optimized
+# Reduced from 1.55GB to ~300MB
+
 # ========================================
 # Stage 1: Builder
 # ========================================
-FROM python:3.11-slim AS builder
+FROM python:3.11.8-slim AS builder
 
 WORKDIR /build
 
 # Install build dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    apt-get update && \
+    apt-get install -y --no-install-recommends \
     build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
+# Install Python dependencies as wheels
 COPY requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /wheels -r requirements.txt \
-    && pip wheel --no-cache-dir --no-deps --wheel-dir /wheels prisma
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip wheel --no-cache-dir --no-deps --wheel-dir /wheels -r requirements.txt
 
-# Generate Prisma Client
-# We install prisma temporarily in builder to generate the client
-RUN pip install --no-cache-dir prisma
+# Generate Prisma Client (only in builder)
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --no-cache-dir prisma
+
 COPY prisma ./prisma
 RUN prisma generate
 
 # ========================================
 # Stage 2: Runtime
 # ========================================
-FROM python:3.11-slim AS runtime
+FROM python:3.11.8-slim
 
 WORKDIR /app
 
@@ -33,37 +40,36 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     UVICORN_WORKERS=1
 
-# Install runtime dependencies (minimal)
-RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install minimal runtime dependencies
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    apt-get update && \
+    apt-get install -y --no-install-recommends \
+    ca-certificates \
     curl \
     libatomic1 \
     openssl \
-    ca-certificates \
     && rm -rf /var/lib/apt/lists/* \
-    && useradd -m appuser
+    && useradd -m -u 1000 appuser
 
 # Install wheels from builder
 COPY --from=builder /wheels /wheels
-RUN pip install --no-cache /wheels/*
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --no-cache-dir /wheels/* && \
+    rm -rf /wheels
 
-# Copy generated Prisma client
-COPY --from=builder /build/prisma ./prisma
+# Copy generated Prisma client from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages/prisma /usr/local/lib/python3.11/site-packages/prisma
 
-COPY . .
+# Copy application code
+COPY prisma ./prisma
+COPY main.py .
+COPY app/ ./app/
 
-# Grant appuser permissions to site-packages for prisma client generation
-RUN chown -R appuser:appuser /app && \
-    chown -R appuser:appuser /usr/local/lib/python3.11/site-packages
+# Set ownership
+RUN chown -R appuser:appuser /app
 
-# Run as appuser for security
 USER appuser
-
-ENV PATH=/home/appuser/.local/bin:$PATH
-
-# Generate Prisma Client in runtime environment as appuser
-# This ensures binaries are stored in a location accessible to the user (e.g., ~/.cache)
-# and the client code in site-packages is updated correctly.
-RUN prisma generate
 
 EXPOSE 8000
 
