--- a/hypercode-core/.env.core
+++ b/hypercode-core/.env.core
@@ -1,11 +1,11 @@
 
 # Core Services Environment Variables
 # Database (Postgres 15)
-POSTGRES_USER=hyper
-POSTGRES_PASSWORD=hyper
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-changeme}
 POSTGRES_DB=hypercode
 POSTGRES_PORT=5432
-HYPERCODE_DB_URL=postgresql://hyper:hyper@postgres:5432/hypercode
+HYPERCODE_DB_URL=postgresql://postgres:${POSTGRES_PASSWORD:-changeme}@postgres:5432/hypercode
 
 # Redis (Redis 7)
 REDIS_PORT=6379
