--- a/hypercode-core/requirements.txt
+++ b/hypercode-core/requirements.txt
@@ -6,7 +6,7 @@ pydantic-settings>=2.4.0
 python-multipart>=0.0.9
 requests==2.31.0
 cryptography>=42.0.0
-python-jose[cryptography]==3.3.0
+pyjwt>=2.8.0
 passlib[bcrypt]==1.7.4
 openai>=1.50.0
 pytest>=8.0.0
@@ -24,3 +24,4 @@ fakeredis>=2.20.0
 sse-starlette==1.6.1
 celery>=5.3.0
 uvicorn[standard]>=0.30.0
+numpy>=1.24.0
