--- a/hypercode-core/requirements.txt
+++ b/hypercode-core/requirements.txt
@@ -24,4 +24,7 @@ fakeredis>=2.20.0
 sse-starlette==1.6.1
 celery>=5.3.0
 uvicorn[standard]>=0.30.0
+websockets>=12.0
+tomlkit>=0.12.0
 numpy>=1.24.0
+python-jose[cryptography]
